# solarium

./: .gitignore  Cargo.toml  README.md
clap-utils/: Cargo.toml
clap-utils/src/: lib.rs
genesis/: Cargo.toml
genesis/src/: main.rs
keygen/: Cargo.toml
keygen/src/: keypair.rs  main.rs  mnemonic.rs
