[workspace]
members = ["clap-utils", "genesis", "keygen"]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
repository = "https://github.com/volodymyrd/solarium"
homepage = "https://github.com/volodymyrd/solarium"
license = "Apache-2.0"
edition = "2024"

[workspace.dependencies]
chrono = "0.4.42"
clap = "4.5.47"
rpassword = "7.4.0"
solana-account = "3.0.0"
solana-accounts-db = "3.0.1"
solana-clap-utils = "3.0.1"
solana-cli-config = "3.0.1"
solana-clock = "3.0.0"
solana-cluster-type = "3.0.0"
solana-entry = "3.0.1"
solana-epoch-schedule = "3.0.0"
solana-fee-calculator = "3.0.0"
solana-genesis-config = "3.0.0"
solana-inflation = "3.0.0"
solana-keypair = "3.0.1"
solana-ledger = "3.0.1"
solana-logger = "3.0.0"
solana-native-token = "3.0.0"
solana-poh-config = "3.0.0"
solana-pubkey = "3.0.0"
solana-rent = "3.0.0"
solana-runtime = "3.0.1"
solana-sdk-ids = "3.0.0"
solana-signer = "3.0.0"
solana-stake-interface = "2.0.1"
solana-stake-program = "3.0.1"
solana-vote-interface = "3.0.0"
solana-vote-program = "3.0.1"
solarium-clap-utils = { path = "clap-utils" }
tiny-bip39 = "2.0.0"
