[package]
name = "solarium-clap-utils"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
solana-clock = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
