[package]
name = "solarium-keygen"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-cli-config = { workspace = true }
clap = { workspace = true, features = ["cargo"] }
rpassword = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
tiny-bip39 = { workspace = true }
